--- a/buildSrc/src/main/resources/META-INF/gradle-plugins/com.tencent.buglyplugin.properties
+++ b/buildSrc/src/main/resources/META-INF/gradle-plugins/com.tencent.buglyplugin.properties
@@ -1,2 +1,2 @@
 #fork:https://github.com/JalenChen/symtabfileuploader/blob/master/buildLocal.gradle
-implementation-class=com.tencent.bugly.gradle.BuglyPlugin
+implementation-class=com.hawksjamesf.plugin.bugly.BuglyPlugin
