--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 println("settings start")
 include ':app'
 include ':gradle_plugin', ':instrumentation:annotations', ':instrumentation:processor'
-//include ':ypose'
+include ':ypose'
 if (isHaHa.toBoolean()) {
     include ':components:template'
 } else {
