--- a/ypose/build.gradle
+++ b/ypose/build.gradle
@@ -4,6 +4,11 @@ apply plugin: "kotlin-android-extensions"
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlinx-serialization'
 
+apply plugin: 'com.tencent.buglyplugin'
+bugly {
+    appId = '3d62251014'
+    appKey = 'a15ecf84-1786-40c6-abf5-fe975fce22e6'
+}
 def srcDirs=[]
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -81,6 +86,6 @@ task pushSD(type: Exec) {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api project(path: ':common')
-    api project(path: ':uicomponent')
+//    api project(path: ':common')
+//    api project(path: ':uicomponent')
 }
