--- a/gradle_plugin/build.gradle
+++ b/gradle_plugin/build.gradle
@@ -15,8 +15,8 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 
 tasks.withType(GroovyCompile) {
-    sourceCompatibility = '1.7'
-    targetCompatibility = '1.7'
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
 }
 
 repositories {
@@ -30,21 +30,29 @@ configurations {
     provided
 }
 
+//sourceSets {
+//    main {
+//        compileClasspath += configurations.provided
+//    }
+//}
 sourceSets {
     main {
-        compileClasspath += configurations.provided
+        java.srcDirs = ['src/main/java', '../buildSrc/src/main/java']
+        groovy.srcDirs = ['src/main/groovy', '../buildSrc/src/main/groovy']
+        resources.srcDirs = ['src/main/resources', '../buildSrc/src/main/resources']
     }
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation gradleApi()
     implementation localGroovy()
-    implementation 'com.google.guava:guava:24.1-jre'
-    implementation 'commons-io:commons-io:2.6'
-    implementation 'commons-codec:commons-codec:1.10'
-    implementation 'org.ow2.asm:asm:7.1'
-//    implementation 'org.javassist:javassist:3.18.2-GA'
-    implementation 'com.android.tools.build:gradle:3.5.2'
+    implementation "com.android.tools.build:gradle:3.5.2"
+    implementation files('../buildSrc/libs/buglySymbolAndroid.jar')
+//    implementation "org.javassist:javassist:3.20.0-GA"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+//    implementation group: 'org.ow2.asm', name: 'asm', version: '5.1'
+//    implementation group: 'org.ow2.asm', name: 'asm-commons', version: '5.1'
 }
 
 group = "com.hawksjamesf.plugin"
@@ -57,7 +65,7 @@ uploadArchives {
             repository(url: uri('../repo'))
             pom.project {
                 groupId "com.hawksjamesf.plugin"
-                artifactId "perf"
+                artifactId "j_plugin"
                 version "1.0.0"
             }
         }
