--- a/app/build.gradle
+++ b/app/build.gradle
@@ -293,7 +293,7 @@ dependencies {
         implementation project(path: ':ypose')
     } else {
         implementation project(path: ':components:myhome')
-//    implementation project(path: ':components:login')
+        implementation project(path: ':components:login')
     }
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 //    apkCheckerDependency group: "com.tencent.matrix", name: "matrix-apk-canary", version: "0.6.0", changing: true
