--- a/framework/uicomponent/build.gradle
+++ b/framework/uicomponent/build.gradle
@@ -82,7 +82,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':framework:common')
-    api project(path: ':framework:av')
+//    implementation project(path: ':framework:av')
 //    implementation project(path: ':image')
     /**
      * ================================ui start=====================================
