--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -150,6 +150,7 @@ dependencies {
     api "io.reactivex.rxjava2:rxkotlin:2.3.0"
     api "io.reactivex.rxjava2:rxjava:2.2.18"
     api "io.reactivex.rxjava2:rxandroid:2.1.1"
+    api "io.reactivex.rxjava3:rxjava:3.0.7"
 
     /**
      * ===============================async end================================
