--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -9,7 +9,7 @@ def srcDirs = [
         "async",
         "serialization",
         "apm",
-        "ypose",
+//        "ypose",
 
 ]
 android {
@@ -23,22 +23,22 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        externalNativeBuild {
-            cmake {
-                cppFlags "-std=c++14"
-//                cppFlags "-std=gnu++11"
-//                targets "hawks","hotfix"
-                abiFilters "arm64-v8a", "armeabi-v7a", "x86","x86_64"   //输出制定三种abi体系结构下的so库
-            }
-        }
+//        externalNativeBuild {
+//            cmake {
+//                cppFlags "-std=c++14"
+////                cppFlags "-std=gnu++11"
+////                targets "hawks","hotfix"
+//                abiFilters "arm64-v8a", "armeabi-v7a", "x86","x86_64"   //输出制定三种abi体系结构下的so库
+//            }
+//        }
 
     }
-    externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt"
-            //path 'src/main/cpp/CMakeLists.txt'
-        }
-    }
+//    externalNativeBuild {
+//        cmake {
+//            path "CMakeLists.txt"
+//            //path 'src/main/cpp/CMakeLists.txt'
+//        }
+//    }
 
     buildTypes {
         release {
