--- a/framework/loader/build.gradle
+++ b/framework/loader/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     api project(path: ':framework:network')
 //    implementation project(path: ':framework:storage')
 //    implementation project(path: ':framework:image')
-    implementation project(path: ':ypose')
+    implementation project(path: ':yposed')
     kapt "com.google.dagger:dagger-compiler:2.16"
     kapt "com.google.dagger:dagger-android-processor:2.16"
 
