fix complie error

--- a/components/myhome/src/main/AndroidManifest.xml
+++ b/components/myhome/src/main/AndroidManifest.xml
@@ -89,11 +89,11 @@
             tools:node="remove"
             tools:targetApi="n" />
         <activity android:name=".BlankActivity">
-            <intent-filter>
+<!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            </intent-filter>
+<!--            </intent-filter>-->
         </activity>
         <receiver
             android:name=".SetWallpaper"
