--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,12 @@ android {
         //lower 5.x
 //        vectorDrawables.useSupportLibrary = true
 //        vectorDrawables.generatedDensities = []
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++14"
+                abiFilters "arm64-v8a", "armeabi-v7a"/*,"x86","x86_64"*/
+            }
+        }
     }
     def releaseKeySet = ['RELEASE_KEY_ALIAS', 'RELEASE_STORE_PASSWORD', 'RELEASE_KEY_PASSWORD']
     def debugKeySet = ['DEBUG_KEY_ALIAS', 'DEBUG_STORE_PASSWORD', 'DEBUG_KEY_PASSWORD']
@@ -165,6 +171,15 @@ android {
     }
     dataBinding {
         enabled = true
+    }
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi-v7a', "arm64-v8a"
+//            exclude "x86","x86_64"
+            universalApk false
+        }
     }
     /**
      * 渠道包 start
