--- a/framework/av/build.gradle
+++ b/framework/av/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     api 'com.github.ctiao:ndkbitmap-armv7a:0.9.21'
     //Other ABIs: optional
     api 'com.github.ctiao:ndkbitmap-armv5:0.9.21'
-    api 'com.github.ctiao:ndkbitmap-x86:0.9.21'
+//    api 'com.github.ctiao:ndkbitmap-x86:0.9.21'
 
     // required, enough for most devices.
     api 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
@@ -81,8 +81,8 @@ dependencies {
     //Other ABIs: optional
     api 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.8'
     api 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.8'
-    api 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.8'
-    api 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.8'
+//    api 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.8'
+//    api 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.8'
 
     //ExoPlayer as IMediaPlayer: optional, experimental
     api 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
