--- a/yposed/build.gradle
+++ b/yposed/build.gradle
@@ -24,7 +24,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++14"
-                abiFilters "arm64-v8a", "armeabi-v7a","x86","x86_64"
+                abiFilters "arm64-v8a", "armeabi-v7a"/*,"x86","x86_64"*/
             }
         }
     }
