--- a/components/template/build.gradle
+++ b/components/template/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation project(path: ':yposed')
 }
