[refactor] rename cpp dir to jni dir
Signed-off-by: jamesfchen <hawks.jamesf@gmail.com>

--- a/yposed/CMakeLists.txt
+++ b/yposed/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_VERBOSE_MAKEFILE on)
 message(yahfa so outputs--->${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${lib_src_dir})
 message(yahfa current source dir--->${CMAKE_CURRENT_SOURCE_DIR})
 #message(yahfa lib src ir--->${lib_src_dir})
-set(lib_src_dir ${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp)
+set(lib_src_dir ${CMAKE_CURRENT_SOURCE_DIR}/src/main/jni)
 #set(lib_build_dir $ENV{HOME}/tmp/${ANDROID_ABI})
 #set(lib_build_dir ${CMAKE_CURRENT_SOURCE_DIR}/.cxx/tmp/${ANDROID_ABI})
 #file(MAKE_DIRECTORY ${lib_build_dir})
