--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 println("settings start")
 include ':app'
 include ':gradle_plugin', ':instrumentation:annotations', ':instrumentation:processor'
-include ':yposed'
+include ':yposed', ':yposedplugin'
 if (isHaHa.toBoolean()) {
     include ':components:template'
     include ':components:module1'
@@ -16,3 +16,4 @@ if (isHaHa.toBoolean()) {
 
 println("settings end")
 include ':dexshell'
+
