--- a/app/build.gradle
+++ b/app/build.gradle
@@ -176,7 +176,7 @@ android {
         abi {
             enable true
             reset()
-            include 'armeabi-v7a', "arm64-v8a"
+            include 'armeabi-v7a', "arm64-v8a",'armeabi'
 //            exclude "x86","x86_64"
             universalApk false
         }
