--- a/yposed/CMakeLists.txt
+++ b/yposed/CMakeLists.txt
@@ -10,4 +10,4 @@ set(lib_src_dir ${CMAKE_CURRENT_SOURCE_DIR}/src/main/jni)
 #file(MAKE_DIRECTORY ${lib_build_dir})
 add_subdirectory(${lib_src_dir}/yahfa)
 add_subdirectory(${lib_src_dir}/hotfix)
-add_subdirectory(${lib_src_dir}/hawks)
+#add_subdirectory(${lib_src_dir}/hawks)
