--- a/components/template/src/main/AndroidManifest.xml
+++ b/components/template/src/main/AndroidManifest.xml
@@ -13,5 +13,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".RemoteServices"
+            android:process=".remote_service" />
+        <service android:name=".LocalServices" />
+        <!--            android:process=".local_service"-->
     </application>
 </manifest>
