--- a/guard/CMakeLists.txt
+++ b/guard/CMakeLists.txt
@@ -8,5 +8,4 @@ set(lib_src_dir ${CMAKE_CURRENT_SOURCE_DIR}/src/main/jni)
 #set(lib_build_dir $ENV{HOME}/tmp/${ANDROID_ABI})
 #set(lib_build_dir ${CMAKE_CURRENT_SOURCE_DIR}/.cxx/tmp/${ANDROID_ABI})
 #file(MAKE_DIRECTORY ${lib_build_dir})
-add_subdirectory(${lib_src_dir}/yahfa)
-add_subdirectory(${lib_src_dir}/hotfix)
+add_subdirectory(${lib_src_dir}/guard)
