--- a/guard/src/main/jni/guard/CMakeLists.txt
+++ b/guard/src/main/jni/guard/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.4.1)
 add_library(
         guard
         SHARED
-        main.cpp
+#        main.cpp
         guard.cpp)
 
 
