add trace time to Splash page

--- a/script/component.gradle
+++ b/script/component.gradle
@@ -28,7 +28,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':framework:loader')
+    api project(path: ':framework:loader')
     kapt "com.google.dagger:dagger-compiler:2.16"
     kapt "com.google.dagger:dagger-android-processor:2.16"
 
