--- a/framework/loader/build.gradle
+++ b/framework/loader/build.gradle
@@ -50,6 +50,6 @@ dependencies {
 //    implementation 'com.google.android.gms:play-services-fitness:16.0.1'
 
     kapt project(path: ':instrumentation:processor')
-    implementation project(path: ':instrumentation:annotations')
+    api project(path: ':instrumentation:annotations')
 }
 
