--- a/framework/network/build.gradle
+++ b/framework/network/build.gradle
@@ -181,4 +181,5 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.16"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "com.github.jnr:jnr-unixsocket:0.23"
+    implementation 'com.google.android.gms:play-services-cronet:17.0.0'
 }
