--- a/yposed/build.gradle
+++ b/yposed/build.gradle
@@ -81,10 +81,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:+"
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation "androidx.annotation:annotation:1.0.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.21-2"
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "androidx.annotation:annotation:1.1.0"
     compileOnly project(path : ':yposedstub')
 }
 //afterEvaluate {
