fix complie error

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,8 +142,8 @@ android {
 
         }
         debug {
-            minifyEnabled true
-            shrinkResources true
+//            minifyEnabled true
+//            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             applicationIdSuffix = '.debug'
             manifestPlaceholders = [
