--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -9,8 +9,6 @@ def srcDirs = [
         "async",
         "serialization",
         "apm",
-//        "ypose",
-
 ]
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -23,22 +21,25 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-//        externalNativeBuild {
-//            cmake {
-//                cppFlags "-std=c++14"
-////                cppFlags "-std=gnu++11"
-////                targets "hawks","hotfix"
-//                abiFilters "arm64-v8a", "armeabi-v7a", "x86","x86_64"   //输出制定三种abi体系结构下的so库
-//            }
-//        }
+        externalNativeBuild {
+            cmake {
+                arguments "-DANDROID_ARM_NEON=TRUE", "-DANDROID_TOOLCHAIN=clang"
+                cppFlags "-std=c++14","-fexceptions", "-frtti"
+                cFlags "-D__STDC_FORMAT_MACROS"
+//                cppFlags "-std=gnu++11"
+//                targets "hawks","hotfix"
+                abiFilters "arm64-v8a", "armeabi-v7a" /*,"x86","x86_64"*/   //输出制定三种abi体系结构下的so库
+            }
+
+        }
 
     }
-//    externalNativeBuild {
-//        cmake {
-//            path "CMakeLists.txt"
-//            //path 'src/main/cpp/CMakeLists.txt'
-//        }
-//    }
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+            //path 'src/main/cpp/CMakeLists.txt'
+        }
+    }
 
     buildTypes {
         release {
