--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -249,9 +249,9 @@ dependencies {
     api "com.orhanobut:logger:${rootProject.ext.loggerVersion}"
     api 'com.jakewharton.timber:timber:4.7.1'
     //memory leak
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:1.6.3"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
-    debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:1.6.3"
+    debugApi 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    releaseApi "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
+    debugApi "com.squareup.leakcanary:leakcanary-support-fragment:1.6.3"
     api 'com.github.markzhai:blockcanary-android:1.5.0'
 
     api 'com.google.firebase:firebase-core:17.2.0'
